; ModuleID = '/home/carl/AnghaBench/radare2/libr/main/extr_radiff2.c___print_diff_graph.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/main/extr_radiff2.c___print_diff_graph.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32 }

@R_CORE_ANAL_GRAPHBODY = common dso_local global i32 0, align 4
@R_CORE_ANAL_GRAPHDIFF = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"scr.utf8\00", align 1
@R_CORE_ANAL_STAR = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [2 x i8] c"t\00", align 1
@.str.2 = private unnamed_addr constant [2 x i8] c"v\00", align 1
@.str.3 = private unnamed_addr constant [2 x i8] c"k\00", align 1
@.str.4 = private unnamed_addr constant [2 x i8] c"g\00", align 1
@R_CORE_ANAL_JSON = common dso_local global i32 0, align 4
@R_CORE_ANAL_JSON_FORMAT_DISASM = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_6__*, i32, i32)* @__print_diff_graph to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__print_diff_graph(%struct.TYPE_6__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* @R_CORE_ANAL_GRAPHBODY, align 4
  %10 = load i32, i32* @R_CORE_ANAL_GRAPHDIFF, align 4
  %11 = or i32 %9, %10
  store i32 %11, i32* %7, align 4
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @r_config_get_i(i32 %14, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  store i32 %15, i32* %8, align 4
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @r_agraph_reset(i32 %18)
  %20 = load i32, i32* %6, align 4
  switch i32 %20, label %79 [
    i32 135, label %21
    i32 129, label %26
    i32 128, label %33
    i32 133, label %40
    i32 130, label %48
    i32 134, label %55
    i32 131, label %62
    i32 132, label %69
    i32 136, label %78
  ]

21:                                               ; preds = %3
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %23 = load i32, i32* %5, align 4
  %24 = load i32, i32* %7, align 4
  %25 = call i32 @r_core_anal_graph(%struct.TYPE_6__* %22, i32 %23, i32 %24)
  br label %87

26:                                               ; preds = %3
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %28 = load i32, i32* %5, align 4
  %29 = load i32, i32* %7, align 4
  %30 = load i32, i32* @R_CORE_ANAL_STAR, align 4
  %31 = or i32 %29, %30
  %32 = call i32 @r_core_anal_graph(%struct.TYPE_6__* %27, i32 %28, i32 %31)
  br label %87

33:                                               ; preds = %3
  %34 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %35 = load i32, i32* %5, align 4
  %36 = call i32 @__generate_graph(%struct.TYPE_6__* %34, i32 %35)
  %37 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %38 = load i32, i32* %8, align 4
  %39 = call i32 @r_core_agraph_print(%struct.TYPE_6__* %37, i32 %38, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  br label %87

40:                                               ; preds = %3
  %41 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %42 = load i32, i32* %5, align 4
  %43 = call i32 @__generate_graph(%struct.TYPE_6__* %41, i32 %42)
  %44 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %45 = load i32, i32* %8, align 4
  %46 = call i32 @r_core_agraph_print(%struct.TYPE_6__* %44, i32 %45, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0))
  %47 = call i32 (...) @r_cons_reset_colors()
  br label %87

48:                                               ; preds = %3
  %49 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %50 = load i32, i32* %5, align 4
  %51 = call i32 @__generate_graph(%struct.TYPE_6__* %49, i32 %50)
  %52 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %53 = load i32, i32* %8, align 4
  %54 = call i32 @r_core_agraph_print(%struct.TYPE_6__* %52, i32 %53, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0))
  br label %87

55:                                               ; preds = %3
  %56 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %57 = load i32, i32* %5, align 4
  %58 = call i32 @__generate_graph(%struct.TYPE_6__* %56, i32 %57)
  %59 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %60 = load i32, i32* %8, align 4
  %61 = call i32 @r_core_agraph_print(%struct.TYPE_6__* %59, i32 %60, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.4, i64 0, i64 0))
  br label %87

62:                                               ; preds = %3
  %63 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %64 = load i32, i32* %5, align 4
  %65 = load i32, i32* %7, align 4
  %66 = load i32, i32* @R_CORE_ANAL_JSON, align 4
  %67 = or i32 %65, %66
  %68 = call i32 @r_core_anal_graph(%struct.TYPE_6__* %63, i32 %64, i32 %67)
  br label %87

69:                                               ; preds = %3
  %70 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %71 = load i32, i32* %5, align 4
  %72 = load i32, i32* %7, align 4
  %73 = load i32, i32* @R_CORE_ANAL_JSON, align 4
  %74 = or i32 %72, %73
  %75 = load i32, i32* @R_CORE_ANAL_JSON_FORMAT_DISASM, align 4
  %76 = or i32 %74, %75
  %77 = call i32 @r_core_anal_graph(%struct.TYPE_6__* %70, i32 %71, i32 %76)
  br label %87

78:                                               ; preds = %3
  br label %79

79:                                               ; preds = %3, %78
  %80 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %81 = load i32, i32* %5, align 4
  %82 = call i32 @__generate_graph(%struct.TYPE_6__* %80, i32 %81)
  %83 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %84 = load i32, i32* %8, align 4
  %85 = call i32 @r_core_agraph_print(%struct.TYPE_6__* %83, i32 %84, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.5, i64 0, i64 0))
  %86 = call i32 (...) @r_cons_reset_colors()
  br label %87

87:                                               ; preds = %79, %69, %62, %55, %48, %40, %33, %26, %21
  ret void
}

declare dso_local i32 @r_config_get_i(i32, i8*) #1

declare dso_local i32 @r_agraph_reset(i32) #1

declare dso_local i32 @r_core_anal_graph(%struct.TYPE_6__*, i32, i32) #1

declare dso_local i32 @__generate_graph(%struct.TYPE_6__*, i32) #1

declare dso_local i32 @r_core_agraph_print(%struct.TYPE_6__*, i32, i8*) #1

declare dso_local i32 @r_cons_reset_colors(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
